--- a/assets/templates/index.html.tmpl
+++ b/assets/templates/index.html.tmpl
@@ -1,3 +1,7 @@
 {{define "index.html"}}
-
+{{ template "header.html" . }}
+<div>
+  This is {{.SiteName}}
+</div>
+{{ template "footer.html" . }}
 {{end}}
