--- a/assets/templates/index.html.tmpl
+++ b/assets/templates/index.html.tmpl
@@ -1,7 +1,7 @@
 {{define "index.html"}}
 {{ template "header.html" . }}
-<div>
-  This is {{.SiteName}}
-</div>
+<nav>
+  Welcome to {{.SiteName}}
+</nav>
 {{ template "footer.html" . }}
 {{end}}
